// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sortBySelector() calls twice ReactDOM.render(<Selector props />, container) 1`] = `
<HeaderFooter-AutoHide
  cssClasses={
    Object {
      "item": "ais-sort-by-selector--item custom-item",
      "root": "ais-sort-by-selector custom-root cx",
      "select": "ais-sort-by-selector custom-select",
    }
  }
  currentValue="index-a"
  options={
    Array [
      Object {
        "label": "Index A",
        "value": "index-a",
      },
      Object {
        "label": "Index B",
        "value": "index-b",
      },
    ]
  }
  setValue={[Function]}
  shouldAutoHideContainer={false}
/>
`;

exports[`sortBySelector() calls twice ReactDOM.render(<Selector props />, container) 2`] = `
<HeaderFooter-AutoHide
  cssClasses={
    Object {
      "item": "ais-sort-by-selector--item custom-item",
      "root": "ais-sort-by-selector custom-root cx",
      "select": "ais-sort-by-selector custom-select",
    }
  }
  currentValue="index-a"
  options={
    Array [
      Object {
        "label": "Index A",
        "value": "index-a",
      },
      Object {
        "label": "Index B",
        "value": "index-b",
      },
    ]
  }
  setValue={[Function]}
  shouldAutoHideContainer={false}
/>
`;

exports[`sortBySelector() renders transformed items 1`] = `
<HeaderFooter-AutoHide
  cssClasses={
    Object {
      "item": "ais-sort-by-selector--item",
      "root": "ais-sort-by-selector",
      "select": "ais-sort-by-selector",
    }
  }
  currentValue="index-a"
  options={
    Array [
      Object {
        "label": "Index A",
        "transformed": true,
        "value": "index-a",
      },
      Object {
        "label": "Index B",
        "transformed": true,
        "value": "index-b",
      },
    ]
  }
  setValue={[Function]}
  shouldAutoHideContainer={false}
/>
`;
